# udpt

./: Cargo.toml
thermometer/: Cargo.toml
thermometer/src/: lib.rs  thermo_socket.rs  thermometr.rs
udp_connections/: Cargo.toml
udp_connections/src/: main.rs
