[package]
name = "udp_connections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thermometer = { version = "0.1.0", path = "../thermometer" }
tokio = { version = "1.36.0", features = ["io-util", "net", "macros", "rt-multi-thread", "time"] }
